# hcparse

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Taskfile.yaml  architecture.md  build.sh  compile.sh  conanfile.txt  devnotes.org  hcparse  hcparse.code-workspace  hcparse.nimble  nim.cfg  readme.org  theindex.html  tmp_docgen_target_hcparse.html  todo.org  xmake.lua
.github/workflows/: test-arch.yaml  test-ubuntu.yaml  test.yaml
cpp/: Makefile  deps.cpp  test-a.cpp  test-b.hpp
hcparse/: hc_typeconv.html  hc_typeconv.idx
hcparse/codegen/: hc_codegen.html  hc_codegen.idx
hcparse/post/: closure_override.html
hcparse/processor/: hc_grouping.html  hc_grouping.idx  hc_postprocess.html  hc_postprocess.idx  wrap_icpp.html  wrap_icpp.idx  wrap_store.html  wrap_store.idx
hcparse/read_boost_wave/: boost_wave.html  boost_wave.idx  boost_wave_tokens.html  boost_wave_tokens.idx  boost_wave_wrap.html  boost_wave_wrap.idx  boost_wave_wrap_tmp.html  boost_wave_wrap_tmp.idx  hc_wavereader.html  hc_wavereader.idx
hcparse/read_deps/: conan.html  conan.idx
hcparse/read_libclang/: cxcommon.html  cxcommon.idx  cxtypes.html  cxtypes.idx  cxvisitors.html  cxvisitors.idx  hc_clangreader.html  hc_clangreader.idx  hc_depresolve.html  hc_genhelper.html  hc_types.html  hc_types.idx  hc_visitors.html  hc_visitors.idx  libclang_extensions.html  libclang_wrap.html  libclang_wrap.idx
hcparse/read_tree_sitter/: hc_tsconvert.html  hc_tsconvert.idx  hc_tsreader.html  hc_tsreader.idx
old/src/: nim.cfg  test.cpp
old/src/hcparse/: hc_parsefront.nim  hc_typeconv.nim
old/src/hcparse/codegen/: hc_codegen.nim
old/src/hcparse/post/: closure_override.rst
old/src/hcparse/processor/: hc_postprocess.nim  wrap_store.nim
old/src/hcparse/read_boost_wave/: .fdignore  .gitignore  CMakeLists.txt  conanfile.txt  hc_wavereader.nim  nim.cfg  wave_c_api.h  xmake.lua
old/src/hcparse/read_doxygen/: dox_codegen.nim
old/src/hcparse/read_libclang/: cxtypes.nim  cxvisitors.nim  hc_genhelper.nim  hc_types.nim  hc_visitors.nim  header.hpp  libclang_wrap.nim
old/src/hcparse/read_tree_sitter/: hc_tsconvert.nim
old/tests/: .gitignore  __tQWindow.nim  header.hpp  incpp.cpp  nim.cfg  sfinae_header.hpp  tBoostWaveReader.nim  tConvertLibs.nim  tHcparseCli.nim  tMergeGroups.nim  tReadConan.nim  tWip.nim  wip_in.cpp
old/wip/: .gitignore  build.nims  nim.cfg
src/: FindNIM.cmake  embedded_includes.hpp.in  hcparse.nim  main.cpp  projectmanager.cpp  projectmanager.hpp
src/hcparse/: cxcommon.nim  cxtypes.nim  cxvisitors.nim  dox_compound.nim  dox_compound.xsd  dox_index.nim  dox_xml.nim  dumpast.nim  hc_clangreader.nim  hc_codegen.nim  hc_depresolve.nim  hc_depstree.nim  hc_docwrap.nim  hc_genhelper.nim  hc_grouping.nim  hc_impls.nim  hc_irgen.nim  hc_parsefront.nim  hc_parsefront_v1.nim  hc_postprocess.nim  hc_save.nim  hc_tsconvert.nim  hc_tsreader.nim  hc_typeconv.nim  hc_types.nim  hc_visitors.nim  hc_wavereader.nim  hc_wrapgen.nim  hc_wrapgen_1.nim  hcparse_cli.nim  libclang.nim  libclang_extensions.cpp  libclang_extensions.nim  libclang_utils.nim  libclang_wrap.nim  nim.cfg  wrap_common.nim  wraphelp.nim
src/hcparse/boost_wave/: .gitignore  CMakeLists.txt  boost_wave.cpp  boost_wave.hpp  boost_wave.nim  boost_wave_generate_nim.nim  boost_wave_global.hpp  boost_wave_test.cpp  boost_wave_test.nim  boost_wave_tokens.nim  boost_wave_wrap.nim  config.nims  nim.cfg  wave_c_api.h
src/hcparse/clang_raw/: make_wrap.nim
src/hcparse/codegen/: hc_codegen.nim
src/hcparse/interop_ir/: wrap_convert.nim  wrap_icpp.nim  wrap_store.nim
src/hcparse/libclang_raw/: build_system.nim  cxcompilation_database.nim  cxerror_code.nim  cxstring.nim  documentation.nim  fatal_error_handler.nim  index.nim  opaque_impls.nim  platform.nim  raw_user.nim
src/hcparse/post/: closure_override.nim  closure_override.rst
src/hcparse/processor/: hc_grouping.nim  hc_postprocess.nim  wrap_decl.nim  wrap_gen.nim  wrap_icpp.nim  wrap_macros.nim  wrap_store.nim
src/hcparse/read_boost_wave/: .fdignore  .gitignore  CMakeLists.txt  boost_wave.cpp  boost_wave.hpp  boost_wave.nim  boost_wave_tokens.nim  boost_wave_wrap.nim  conanfile.txt  hc_wavereader.nim
src/hcparse/read_deps/: conan.nim
src/hcparse/read_doxygen/: dox_codegen.nim
src/hcparse/read_libclang/: cxcommon.nim  cxerror_code.nim  cxstring.nim  cxtypes.nim  cxvisitors.nim  documentation.nim  hc_clangreader.nim  hc_depresolve.nim  hc_types.nim  hc_visitors.nim  index.nim  libclang.nim  libclang_extensions.cpp  libclang_wrap.nim  opaque_impls.nim  platform.nim  raw_user.nim  readme.org
src/hcparse/read_tree_sitter/: hc_tsconvert.nim  hc_tsreader.nim
tests/: .gdbinit  .gitignore  ccode.yaml  config.nims  incpp.cpp  nim.cfg  runall.nim  tBoostWaveExecute.nim  tBoostWaveGenerate.nim  tBoostWaveReader.nim  tCleanUser.nim  tConvertBitsTs.nim  tConvertLibs.nim  tDepAnalyser.nim  tForwardDecl.nim  tFromTreeSitter.nim  tHcparseCli.nim  tIndexTU.nim  tLibclangBasic.nim  tMergeGroups.nim  tQtWrap.nim  tReadConan.nim  tReadmeExamples.nim  tSfinaeWrap.nim  tSideEffects.nim  tSingleWrap.nim  tTranspiler.nim  tWip.nim  tWrapEnum.nim  tWrapGen.nim  wip.cpp  wip_in.hpp
tests/files/: wavereader_main.h  wavereader_subcontext.h
tests/files/libgit_test/: stdcopy.h
wip/: build.nims  build.sh  deps.cpp  fixshit.sh  libclang-1.cpp  libclang-2.cpp  libclang-3.cpp  libclang_2.nim  opaque_impls.nim  predefined.hpp  raw_user.nim  test-b.hpp
